// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`doAction:formItem validate 1`] = `
<div>
  <div
    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page"
    data-prismui-theme="cxd"
  >
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-content"
    >
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-main"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-body"
          role="page-body"
        >
          <button
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Button __PRISMUI_COMPONENT_CLASS_PREFIX__Button--default __PRISMUI_COMPONENT_CLASS_PREFIX__Button--size-default"
            type="button"
          >
            <span>
              校验name
            </span>
          </button>
          <button
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Button __PRISMUI_COMPONENT_CLASS_PREFIX__Button--default __PRISMUI_COMPONENT_CLASS_PREFIX__Button--size-default"
            type="button"
          >
            <span>
              校验email
            </span>
          </button>
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-item __PRISMUI_COMPONENT_CLASS_PREFIX__Form-item--normal"
            data-amis-name="validate_info"
            data-role="form-item"
          >
            <label
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-label"
            >
              <span>
                <span
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
                >
                  <span>
                    验证信息：
                  </span>
                </span>
              </span>
            </label>
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-control __PRISMUI_COMPONENT_CLASS_PREFIX__TextControl"
            >
              <div
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__TextControl-input"
              >
                <input
                  autocomplete="off"
                  class=""
                  name="validate_info"
                  placeholder=""
                  size="10"
                  type="text"
                  value="{
  "error": "这是必填项"
}"
                />
              </div>
            </div>
          </div>
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-item __PRISMUI_COMPONENT_CLASS_PREFIX__Form-item--normal"
            data-amis-name="validate_res"
            data-role="form-item"
          >
            <label
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-label"
            >
              <span>
                <span
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
                >
                  <span>
                    验证结果：
                  </span>
                </span>
              </span>
            </label>
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-control __PRISMUI_COMPONENT_CLASS_PREFIX__TextControl"
            >
              <div
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__TextControl-input"
              >
                <input
                  autocomplete="off"
                  class=""
                  name="validate_res"
                  placeholder=""
                  size="10"
                  type="text"
                  value="validate name fail"
                />
              </div>
            </div>
          </div>
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel __PRISMUI_COMPONENT_CLASS_PREFIX__Panel--default __PRISMUI_COMPONENT_CLASS_PREFIX__Panel--form"
            data-role="container"
          >
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-heading"
            >
              <h3
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-title"
              >
                <span
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
                >
                  <span>
                    表单
                  </span>
                </span>
              </h3>
            </div>
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-body"
            >
              <form
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form __PRISMUI_COMPONENT_CLASS_PREFIX__Form--normal"
                novalidate=""
              >
                <input
                  style="display: none;"
                  type="submit"
                />
                <div
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-item __PRISMUI_COMPONENT_CLASS_PREFIX__Form-item--normal is-error is-required has-error--isRequired"
                  data-amis-name="name"
                  data-role="form-item"
                >
                  <label
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-label"
                  >
                    <span>
                      <span
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
                      >
                        <span>
                          姓名：
                        </span>
                      </span>
                      <span
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-star"
                      >
                        *
                      </span>
                    </span>
                  </label>
                  <div
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-control is-error has-error--isRequired __PRISMUI_COMPONENT_CLASS_PREFIX__TextControl is-focused"
                  >
                    <div
                      class="__PRISMUI_COMPONENT_CLASS_PREFIX__TextControl-input"
                    >
                      <input
                        autocomplete="off"
                        class=""
                        name="name"
                        placeholder=""
                        size="10"
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                  <ul
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-feedback"
                  >
                    <li>
                      这是必填项
                    </li>
                  </ul>
                </div>
                <div
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-item __PRISMUI_COMPONENT_CLASS_PREFIX__Form-item--normal is-required"
                  data-amis-name="email"
                  data-role="form-item"
                >
                  <label
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-label"
                  >
                    <span>
                      <span
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
                      >
                        <span>
                          邮箱：
                        </span>
                      </span>
                      <span
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-star"
                      >
                        *
                      </span>
                    </span>
                  </label>
                  <div
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-control __PRISMUI_COMPONENT_CLASS_PREFIX__TextControl"
                  >
                    <div
                      class="__PRISMUI_COMPONENT_CLASS_PREFIX__TextControl-input"
                    >
                      <input
                        autocomplete="off"
                        class=""
                        name="email"
                        placeholder=""
                        size="10"
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                </div>
              </form>
            </div>
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-footerWrap"
            >
              <div
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-btnToolbar __PRISMUI_COMPONENT_CLASS_PREFIX__Panel-footer"
              >
                <button
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__Button __PRISMUI_COMPONENT_CLASS_PREFIX__Button--primary __PRISMUI_COMPONENT_CLASS_PREFIX__Button--size-default"
                  type="submit"
                >
                  <span>
                    提交
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`doAction:formItem validate 2`] = `
<div>
  <div
    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page"
    data-prismui-theme="cxd"
  >
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-content"
    >
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-main"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-body"
          role="page-body"
        >
          <button
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Button __PRISMUI_COMPONENT_CLASS_PREFIX__Button--default __PRISMUI_COMPONENT_CLASS_PREFIX__Button--size-default"
            type="button"
          >
            <span>
              校验name
            </span>
          </button>
          <button
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Button __PRISMUI_COMPONENT_CLASS_PREFIX__Button--default __PRISMUI_COMPONENT_CLASS_PREFIX__Button--size-default"
            type="button"
          >
            <span>
              校验email
            </span>
          </button>
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-item __PRISMUI_COMPONENT_CLASS_PREFIX__Form-item--normal"
            data-amis-name="validate_info"
            data-role="form-item"
          >
            <label
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-label"
            >
              <span>
                <span
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
                >
                  <span>
                    验证信息：
                  </span>
                </span>
              </span>
            </label>
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-control __PRISMUI_COMPONENT_CLASS_PREFIX__TextControl"
            >
              <div
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__TextControl-input"
              >
                <input
                  autocomplete="off"
                  class=""
                  name="validate_info"
                  placeholder=""
                  size="10"
                  type="text"
                  value="{
  "error": "这是必填项"
}"
                />
              </div>
            </div>
          </div>
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-item __PRISMUI_COMPONENT_CLASS_PREFIX__Form-item--normal"
            data-amis-name="validate_res"
            data-role="form-item"
          >
            <label
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-label"
            >
              <span>
                <span
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
                >
                  <span>
                    验证结果：
                  </span>
                </span>
              </span>
            </label>
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-control __PRISMUI_COMPONENT_CLASS_PREFIX__TextControl"
            >
              <div
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__TextControl-input"
              >
                <input
                  autocomplete="off"
                  class=""
                  name="validate_res"
                  placeholder=""
                  size="10"
                  type="text"
                  value="validate email fail"
                />
              </div>
            </div>
          </div>
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel __PRISMUI_COMPONENT_CLASS_PREFIX__Panel--default __PRISMUI_COMPONENT_CLASS_PREFIX__Panel--form"
            data-role="container"
          >
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-heading"
            >
              <h3
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-title"
              >
                <span
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
                >
                  <span>
                    表单
                  </span>
                </span>
              </h3>
            </div>
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-body"
            >
              <form
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form __PRISMUI_COMPONENT_CLASS_PREFIX__Form--normal"
                novalidate=""
              >
                <input
                  style="display: none;"
                  type="submit"
                />
                <div
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-item __PRISMUI_COMPONENT_CLASS_PREFIX__Form-item--normal is-error is-required has-error--isRequired"
                  data-amis-name="name"
                  data-role="form-item"
                >
                  <label
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-label"
                  >
                    <span>
                      <span
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
                      >
                        <span>
                          姓名：
                        </span>
                      </span>
                      <span
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-star"
                      >
                        *
                      </span>
                    </span>
                  </label>
                  <div
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-control is-error has-error--isRequired __PRISMUI_COMPONENT_CLASS_PREFIX__TextControl"
                  >
                    <div
                      class="__PRISMUI_COMPONENT_CLASS_PREFIX__TextControl-input"
                    >
                      <input
                        autocomplete="off"
                        class=""
                        name="name"
                        placeholder=""
                        size="10"
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                  <ul
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-feedback"
                  >
                    <li>
                      这是必填项
                    </li>
                  </ul>
                </div>
                <div
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-item __PRISMUI_COMPONENT_CLASS_PREFIX__Form-item--normal is-error is-required has-error--isRequired"
                  data-amis-name="email"
                  data-role="form-item"
                >
                  <label
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-label"
                  >
                    <span>
                      <span
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
                      >
                        <span>
                          邮箱：
                        </span>
                      </span>
                      <span
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-star"
                      >
                        *
                      </span>
                    </span>
                  </label>
                  <div
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-control is-error has-error--isRequired __PRISMUI_COMPONENT_CLASS_PREFIX__TextControl is-focused"
                  >
                    <div
                      class="__PRISMUI_COMPONENT_CLASS_PREFIX__TextControl-input"
                    >
                      <input
                        autocomplete="off"
                        class=""
                        name="email"
                        placeholder=""
                        size="10"
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                  <ul
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-feedback"
                  >
                    <li>
                      这是必填项
                    </li>
                  </ul>
                </div>
              </form>
            </div>
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-footerWrap"
            >
              <div
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-btnToolbar __PRISMUI_COMPONENT_CLASS_PREFIX__Panel-footer"
              >
                <button
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__Button __PRISMUI_COMPONENT_CLASS_PREFIX__Button--primary __PRISMUI_COMPONENT_CLASS_PREFIX__Button--size-default"
                  type="submit"
                >
                  <span>
                    提交
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`doAction:formItem validate 3`] = `
<div>
  <div
    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page"
    data-prismui-theme="cxd"
  >
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-content"
    >
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-main"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-body"
          role="page-body"
        >
          <button
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Button __PRISMUI_COMPONENT_CLASS_PREFIX__Button--default __PRISMUI_COMPONENT_CLASS_PREFIX__Button--size-default"
            type="button"
          >
            <span>
              校验name
            </span>
          </button>
          <button
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Button __PRISMUI_COMPONENT_CLASS_PREFIX__Button--default __PRISMUI_COMPONENT_CLASS_PREFIX__Button--size-default"
            type="button"
          >
            <span>
              校验email
            </span>
          </button>
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-item __PRISMUI_COMPONENT_CLASS_PREFIX__Form-item--normal"
            data-amis-name="validate_info"
            data-role="form-item"
          >
            <label
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-label"
            >
              <span>
                <span
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
                >
                  <span>
                    验证信息：
                  </span>
                </span>
              </span>
            </label>
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-control __PRISMUI_COMPONENT_CLASS_PREFIX__TextControl"
            >
              <div
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__TextControl-input"
              >
                <input
                  autocomplete="off"
                  class=""
                  name="validate_info"
                  placeholder=""
                  size="10"
                  type="text"
                  value="{
  "error": "Email 格式不正确",
  "value": "invalid_email"
}"
                />
              </div>
            </div>
          </div>
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-item __PRISMUI_COMPONENT_CLASS_PREFIX__Form-item--normal"
            data-amis-name="validate_res"
            data-role="form-item"
          >
            <label
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-label"
            >
              <span>
                <span
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
                >
                  <span>
                    验证结果：
                  </span>
                </span>
              </span>
            </label>
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-control __PRISMUI_COMPONENT_CLASS_PREFIX__TextControl"
            >
              <div
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__TextControl-input"
              >
                <input
                  autocomplete="off"
                  class=""
                  name="validate_res"
                  placeholder=""
                  size="10"
                  type="text"
                  value="validate email fail"
                />
              </div>
            </div>
          </div>
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel __PRISMUI_COMPONENT_CLASS_PREFIX__Panel--default __PRISMUI_COMPONENT_CLASS_PREFIX__Panel--form"
            data-role="container"
          >
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-heading"
            >
              <h3
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-title"
              >
                <span
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
                >
                  <span>
                    表单
                  </span>
                </span>
              </h3>
            </div>
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-body"
            >
              <form
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form __PRISMUI_COMPONENT_CLASS_PREFIX__Form--normal"
                novalidate=""
              >
                <input
                  style="display: none;"
                  type="submit"
                />
                <div
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-item __PRISMUI_COMPONENT_CLASS_PREFIX__Form-item--normal is-error is-required has-error--isRequired"
                  data-amis-name="name"
                  data-role="form-item"
                >
                  <label
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-label"
                  >
                    <span>
                      <span
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
                      >
                        <span>
                          姓名：
                        </span>
                      </span>
                      <span
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-star"
                      >
                        *
                      </span>
                    </span>
                  </label>
                  <div
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-control is-error has-error--isRequired __PRISMUI_COMPONENT_CLASS_PREFIX__TextControl"
                  >
                    <div
                      class="__PRISMUI_COMPONENT_CLASS_PREFIX__TextControl-input"
                    >
                      <input
                        autocomplete="off"
                        class=""
                        name="name"
                        placeholder=""
                        size="10"
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                  <ul
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-feedback"
                  >
                    <li>
                      这是必填项
                    </li>
                  </ul>
                </div>
                <div
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-item __PRISMUI_COMPONENT_CLASS_PREFIX__Form-item--normal is-error is-required has-error--isEmail"
                  data-amis-name="email"
                  data-role="form-item"
                >
                  <label
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-label"
                  >
                    <span>
                      <span
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
                      >
                        <span>
                          邮箱：
                        </span>
                      </span>
                      <span
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-star"
                      >
                        *
                      </span>
                    </span>
                  </label>
                  <div
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-control is-error has-error--isEmail __PRISMUI_COMPONENT_CLASS_PREFIX__TextControl is-focused"
                  >
                    <div
                      class="__PRISMUI_COMPONENT_CLASS_PREFIX__TextControl-input"
                    >
                      <input
                        autocomplete="off"
                        class=""
                        name="email"
                        placeholder=""
                        size="10"
                        type="text"
                        value="invalid_email"
                      />
                    </div>
                  </div>
                  <ul
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-feedback"
                  >
                    <li>
                      Email 格式不正确
                    </li>
                  </ul>
                </div>
              </form>
            </div>
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-footerWrap"
            >
              <div
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-btnToolbar __PRISMUI_COMPONENT_CLASS_PREFIX__Panel-footer"
              >
                <button
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__Button __PRISMUI_COMPONENT_CLASS_PREFIX__Button--primary __PRISMUI_COMPONENT_CLASS_PREFIX__Button--size-default"
                  type="submit"
                >
                  <span>
                    提交
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`doAction:formItem validate 4`] = `
<div>
  <div
    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page"
    data-prismui-theme="cxd"
  >
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-content"
    >
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-main"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-body"
          role="page-body"
        >
          <button
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Button __PRISMUI_COMPONENT_CLASS_PREFIX__Button--default __PRISMUI_COMPONENT_CLASS_PREFIX__Button--size-default"
            type="button"
          >
            <span>
              校验name
            </span>
          </button>
          <button
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Button __PRISMUI_COMPONENT_CLASS_PREFIX__Button--default __PRISMUI_COMPONENT_CLASS_PREFIX__Button--size-default"
            type="button"
          >
            <span>
              校验email
            </span>
          </button>
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-item __PRISMUI_COMPONENT_CLASS_PREFIX__Form-item--normal"
            data-amis-name="validate_info"
            data-role="form-item"
          >
            <label
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-label"
            >
              <span>
                <span
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
                >
                  <span>
                    验证信息：
                  </span>
                </span>
              </span>
            </label>
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-control __PRISMUI_COMPONENT_CLASS_PREFIX__TextControl"
            >
              <div
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__TextControl-input"
              >
                <input
                  autocomplete="off"
                  class=""
                  name="validate_info"
                  placeholder=""
                  size="10"
                  type="text"
                  value="{
  "error": "Email 格式不正确",
  "value": "invalid_email"
}"
                />
              </div>
            </div>
          </div>
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-item __PRISMUI_COMPONENT_CLASS_PREFIX__Form-item--normal"
            data-amis-name="validate_res"
            data-role="form-item"
          >
            <label
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-label"
            >
              <span>
                <span
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
                >
                  <span>
                    验证结果：
                  </span>
                </span>
              </span>
            </label>
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-control __PRISMUI_COMPONENT_CLASS_PREFIX__TextControl"
            >
              <div
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__TextControl-input"
              >
                <input
                  autocomplete="off"
                  class=""
                  name="validate_res"
                  placeholder=""
                  size="10"
                  type="text"
                  value="validate email success"
                />
              </div>
            </div>
          </div>
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel __PRISMUI_COMPONENT_CLASS_PREFIX__Panel--default __PRISMUI_COMPONENT_CLASS_PREFIX__Panel--form"
            data-role="container"
          >
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-heading"
            >
              <h3
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-title"
              >
                <span
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
                >
                  <span>
                    表单
                  </span>
                </span>
              </h3>
            </div>
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-body"
            >
              <form
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form __PRISMUI_COMPONENT_CLASS_PREFIX__Form--normal"
                novalidate=""
              >
                <input
                  style="display: none;"
                  type="submit"
                />
                <div
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-item __PRISMUI_COMPONENT_CLASS_PREFIX__Form-item--normal is-required"
                  data-amis-name="name"
                  data-role="form-item"
                >
                  <label
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-label"
                  >
                    <span>
                      <span
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
                      >
                        <span>
                          姓名：
                        </span>
                      </span>
                      <span
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-star"
                      >
                        *
                      </span>
                    </span>
                  </label>
                  <div
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-control __PRISMUI_COMPONENT_CLASS_PREFIX__TextControl"
                  >
                    <div
                      class="__PRISMUI_COMPONENT_CLASS_PREFIX__TextControl-input"
                    >
                      <input
                        autocomplete="off"
                        class=""
                        name="name"
                        placeholder=""
                        size="10"
                        type="text"
                        value="amis"
                      />
                    </div>
                  </div>
                </div>
                <div
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-item __PRISMUI_COMPONENT_CLASS_PREFIX__Form-item--normal is-required"
                  data-amis-name="email"
                  data-role="form-item"
                >
                  <label
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-label"
                  >
                    <span>
                      <span
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
                      >
                        <span>
                          邮箱：
                        </span>
                      </span>
                      <span
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-star"
                      >
                        *
                      </span>
                    </span>
                  </label>
                  <div
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-control __PRISMUI_COMPONENT_CLASS_PREFIX__TextControl is-focused"
                  >
                    <div
                      class="__PRISMUI_COMPONENT_CLASS_PREFIX__TextControl-input"
                    >
                      <input
                        autocomplete="off"
                        class=""
                        name="email"
                        placeholder=""
                        size="10"
                        type="text"
                        value="amis@baidu.com"
                      />
                    </div>
                  </div>
                </div>
              </form>
            </div>
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-footerWrap"
            >
              <div
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-btnToolbar __PRISMUI_COMPONENT_CLASS_PREFIX__Panel-footer"
              >
                <button
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__Button __PRISMUI_COMPONENT_CLASS_PREFIX__Button--primary __PRISMUI_COMPONENT_CLASS_PREFIX__Button--size-default"
                  type="submit"
                >
                  <span>
                    提交
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`doAction:formItem validate 5`] = `
<div>
  <div
    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page"
    data-prismui-theme="cxd"
  >
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-content"
    >
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-main"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-body"
          role="page-body"
        >
          <button
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Button __PRISMUI_COMPONENT_CLASS_PREFIX__Button--default __PRISMUI_COMPONENT_CLASS_PREFIX__Button--size-default"
            type="button"
          >
            <span>
              校验name
            </span>
          </button>
          <button
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Button __PRISMUI_COMPONENT_CLASS_PREFIX__Button--default __PRISMUI_COMPONENT_CLASS_PREFIX__Button--size-default"
            type="button"
          >
            <span>
              校验email
            </span>
          </button>
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-item __PRISMUI_COMPONENT_CLASS_PREFIX__Form-item--normal"
            data-amis-name="validate_info"
            data-role="form-item"
          >
            <label
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-label"
            >
              <span>
                <span
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
                >
                  <span>
                    验证信息：
                  </span>
                </span>
              </span>
            </label>
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-control __PRISMUI_COMPONENT_CLASS_PREFIX__TextControl"
            >
              <div
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__TextControl-input"
              >
                <input
                  autocomplete="off"
                  class=""
                  name="validate_info"
                  placeholder=""
                  size="10"
                  type="text"
                  value="{
  "error": "",
  "value": "amis"
}"
                />
              </div>
            </div>
          </div>
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-item __PRISMUI_COMPONENT_CLASS_PREFIX__Form-item--normal"
            data-amis-name="validate_res"
            data-role="form-item"
          >
            <label
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-label"
            >
              <span>
                <span
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
                >
                  <span>
                    验证结果：
                  </span>
                </span>
              </span>
            </label>
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-control __PRISMUI_COMPONENT_CLASS_PREFIX__TextControl"
            >
              <div
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__TextControl-input"
              >
                <input
                  autocomplete="off"
                  class=""
                  name="validate_res"
                  placeholder=""
                  size="10"
                  type="text"
                  value="validate name success"
                />
              </div>
            </div>
          </div>
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel __PRISMUI_COMPONENT_CLASS_PREFIX__Panel--default __PRISMUI_COMPONENT_CLASS_PREFIX__Panel--form"
            data-role="container"
          >
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-heading"
            >
              <h3
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-title"
              >
                <span
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
                >
                  <span>
                    表单
                  </span>
                </span>
              </h3>
            </div>
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-body"
            >
              <form
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form __PRISMUI_COMPONENT_CLASS_PREFIX__Form--normal"
                novalidate=""
              >
                <input
                  style="display: none;"
                  type="submit"
                />
                <div
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-item __PRISMUI_COMPONENT_CLASS_PREFIX__Form-item--normal is-required"
                  data-amis-name="name"
                  data-role="form-item"
                >
                  <label
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-label"
                  >
                    <span>
                      <span
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
                      >
                        <span>
                          姓名：
                        </span>
                      </span>
                      <span
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-star"
                      >
                        *
                      </span>
                    </span>
                  </label>
                  <div
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-control __PRISMUI_COMPONENT_CLASS_PREFIX__TextControl"
                  >
                    <div
                      class="__PRISMUI_COMPONENT_CLASS_PREFIX__TextControl-input"
                    >
                      <input
                        autocomplete="off"
                        class=""
                        name="name"
                        placeholder=""
                        size="10"
                        type="text"
                        value="amis"
                      />
                    </div>
                  </div>
                </div>
                <div
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-item __PRISMUI_COMPONENT_CLASS_PREFIX__Form-item--normal is-required"
                  data-amis-name="email"
                  data-role="form-item"
                >
                  <label
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-label"
                  >
                    <span>
                      <span
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
                      >
                        <span>
                          邮箱：
                        </span>
                      </span>
                      <span
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-star"
                      >
                        *
                      </span>
                    </span>
                  </label>
                  <div
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-control __PRISMUI_COMPONENT_CLASS_PREFIX__TextControl is-focused"
                  >
                    <div
                      class="__PRISMUI_COMPONENT_CLASS_PREFIX__TextControl-input"
                    >
                      <input
                        autocomplete="off"
                        class=""
                        name="email"
                        placeholder=""
                        size="10"
                        type="text"
                        value="amis@baidu.com"
                      />
                    </div>
                  </div>
                </div>
              </form>
            </div>
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-footerWrap"
            >
              <div
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-btnToolbar __PRISMUI_COMPONENT_CLASS_PREFIX__Panel-footer"
              >
                <button
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__Button __PRISMUI_COMPONENT_CLASS_PREFIX__Button--primary __PRISMUI_COMPONENT_CLASS_PREFIX__Button--size-default"
                  type="submit"
                >
                  <span>
                    提交
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`doAction:formItem validate 6`] = `
<div>
  <div
    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page"
    data-prismui-theme="cxd"
  >
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-content"
    >
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-main"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-body"
          role="page-body"
        >
          <button
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Button __PRISMUI_COMPONENT_CLASS_PREFIX__Button--default __PRISMUI_COMPONENT_CLASS_PREFIX__Button--size-default"
            type="button"
          >
            <span>
              校验name
            </span>
          </button>
          <button
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Button __PRISMUI_COMPONENT_CLASS_PREFIX__Button--default __PRISMUI_COMPONENT_CLASS_PREFIX__Button--size-default"
            type="button"
          >
            <span>
              校验email
            </span>
          </button>
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-item __PRISMUI_COMPONENT_CLASS_PREFIX__Form-item--normal"
            data-amis-name="validate_info"
            data-role="form-item"
          >
            <label
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-label"
            >
              <span>
                <span
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
                >
                  <span>
                    验证信息：
                  </span>
                </span>
              </span>
            </label>
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-control __PRISMUI_COMPONENT_CLASS_PREFIX__TextControl"
            >
              <div
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__TextControl-input"
              >
                <input
                  autocomplete="off"
                  class=""
                  name="validate_info"
                  placeholder=""
                  size="10"
                  type="text"
                  value="{
  "error": "",
  "value": "amis@baidu.com"
}"
                />
              </div>
            </div>
          </div>
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-item __PRISMUI_COMPONENT_CLASS_PREFIX__Form-item--normal"
            data-amis-name="validate_res"
            data-role="form-item"
          >
            <label
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-label"
            >
              <span>
                <span
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
                >
                  <span>
                    验证结果：
                  </span>
                </span>
              </span>
            </label>
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-control __PRISMUI_COMPONENT_CLASS_PREFIX__TextControl"
            >
              <div
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__TextControl-input"
              >
                <input
                  autocomplete="off"
                  class=""
                  name="validate_res"
                  placeholder=""
                  size="10"
                  type="text"
                  value="validate email success"
                />
              </div>
            </div>
          </div>
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel __PRISMUI_COMPONENT_CLASS_PREFIX__Panel--default __PRISMUI_COMPONENT_CLASS_PREFIX__Panel--form"
            data-role="container"
          >
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-heading"
            >
              <h3
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-title"
              >
                <span
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
                >
                  <span>
                    表单
                  </span>
                </span>
              </h3>
            </div>
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-body"
            >
              <form
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form __PRISMUI_COMPONENT_CLASS_PREFIX__Form--normal"
                novalidate=""
              >
                <input
                  style="display: none;"
                  type="submit"
                />
                <div
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-item __PRISMUI_COMPONENT_CLASS_PREFIX__Form-item--normal is-required"
                  data-amis-name="name"
                  data-role="form-item"
                >
                  <label
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-label"
                  >
                    <span>
                      <span
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
                      >
                        <span>
                          姓名：
                        </span>
                      </span>
                      <span
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-star"
                      >
                        *
                      </span>
                    </span>
                  </label>
                  <div
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-control __PRISMUI_COMPONENT_CLASS_PREFIX__TextControl"
                  >
                    <div
                      class="__PRISMUI_COMPONENT_CLASS_PREFIX__TextControl-input"
                    >
                      <input
                        autocomplete="off"
                        class=""
                        name="name"
                        placeholder=""
                        size="10"
                        type="text"
                        value="amis"
                      />
                    </div>
                  </div>
                </div>
                <div
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-item __PRISMUI_COMPONENT_CLASS_PREFIX__Form-item--normal is-required"
                  data-amis-name="email"
                  data-role="form-item"
                >
                  <label
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-label"
                  >
                    <span>
                      <span
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
                      >
                        <span>
                          邮箱：
                        </span>
                      </span>
                      <span
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-star"
                      >
                        *
                      </span>
                    </span>
                  </label>
                  <div
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-control __PRISMUI_COMPONENT_CLASS_PREFIX__TextControl is-focused"
                  >
                    <div
                      class="__PRISMUI_COMPONENT_CLASS_PREFIX__TextControl-input"
                    >
                      <input
                        autocomplete="off"
                        class=""
                        name="email"
                        placeholder=""
                        size="10"
                        type="text"
                        value="amis@baidu.com"
                      />
                    </div>
                  </div>
                </div>
              </form>
            </div>
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-footerWrap"
            >
              <div
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-btnToolbar __PRISMUI_COMPONENT_CLASS_PREFIX__Panel-footer"
              >
                <button
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__Button __PRISMUI_COMPONENT_CLASS_PREFIX__Button--primary __PRISMUI_COMPONENT_CLASS_PREFIX__Button--size-default"
                  type="submit"
                >
                  <span>
                    提交
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
